--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="modal-body">
         <p> Il portale WebGIS del Progetto di sviluppo locale Rionero2020 promosso dall'amministrazione comunale di Rionero Sannitico (IS). Per esplorare le funzioni del WebGIS utilizza la barra di navigazione a sinistra dello schermo dove potrai leggere le informazioni relative al progetto di sviluppo locale, esplorare i tematismi cartografici prodotti, interrogarli, cercare statistiche relative al tuo comune, inviare e-mail e contattare i progettisti.</p>
 		<br>
-		<p style="text-align: center; color: #FFD960"> <b>Buona navigazione</p>
+		<p style="text-align: center; color: #FFD960"> <b>Buona navigazione</b></p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Chiudi</button>
