--- a/index.html
+++ b/index.html
@@ -1400,7 +1400,7 @@
                         <td colspan="2"><hr style="border: 1px dashed orange;" /></td>\
                     </tr>\
                     <tr>\
-                        <td colspan="2"><strong>Tasso di disoccupazione giovanile (%)</strong><br />' + (feature.properties['DISS'] !== null ? Autolinker.link(String(feature.properties['DISS'])) : '') + '</td>\
+                        <td colspan="2"><strong>Tasso di disoccupazione (%)</strong><br />' + (feature.properties['DISS'] !== null ? Autolinker.link(String(feature.properties['DISS'])) : '') + '</td>\
                     </tr>\
                 </table>';
             layer.bindPopup(popupContent, {maxHeight: 400});
