--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h4 class="modal-title" style="text-align: center">WebGIS <span style="color: #7BC5B8">RIONERO</span><span style="color: #948077">2</span><span style="color: #FFD960">0</span><span style="color: #948077">2</span><span style="color: #FFD960">0</span></h4>
       </div>
       <div class="modal-body">
-        <p> Il portale WebGIS del Progetto di sviluppo locale Rionero2020 promosso dall'amministrazione comunale di Rionero Sannitico (IS). Per esplorare le funzioni del WebGIS utilizza la barra di navigazione a sinistra dello schermo dove potrai leggere le informazioni relative al progetto di sviluppo locale, esplorare i tematismi cartografici prodotti, interrogarli, cercare statistiche relative al tuo comune, inviare e-mail e contattare i progettisti.</p>
+        <p> Il portale webgis del Laboratorio partecipato del Progetto di sviluppo locale Rionero2020 promosso dall'amministrazione comunale di Rionero Sannitico (IS). Per esplorare le funzioni del WebGIS utilizza la barra di navigazione a sinistra dello schermo dove potrai leggere le informazioni relative al progetto di sviluppo locale, esplorare i tematismi cartografici prodotti, interrogarli, cercare statistiche relative al tuo comune, inviare e-mail e contattare i progettisti.</p>
 		<br>
 		<p style="text-align: center; color: #FFD960"> <b>Buona navigazione</b></p>
       </div>
@@ -48,7 +48,7 @@
 	</div>
 	
 	<div id="logo">
-	<img src="images/logo.jpg" width="75" height="75">
+	<img src="images/logo.png" width="75" height="75">
 	<!-- Modal box launch -->
 	</div>
 	
@@ -1663,7 +1663,7 @@ var search = new L.Control.Search({
             resetLabels([layer_Popolazioneedinamichedemografiche_11]);
         });
 		
-		var zoomControl = L.control.zoom({position: 'topright'}).addTo(map);
+		var zoomControl = L.control.zoom({position: 'bottomright'}).addTo(map);
 		var sidebar = L.control.sidebar('sidebar').addTo(map);
 		
 		var htmlObject = mylegend.getContainer();
