--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
 	</div>
 	</div>
 	
+	
+	<div class="circle">
 	<div id="logo">
 	<img src="images/logo.png" width="75" height="75">
 	<!-- Modal box launch -->
+	</div>
 	</div>
 	
 
@@ -1663,7 +1666,7 @@ var search = new L.Control.Search({
             resetLabels([layer_Popolazioneedinamichedemografiche_11]);
         });
 		
-		var zoomControl = L.control.zoom({position: 'bottomright'}).addTo(map);
+		var zoomControl = L.control.zoom({position: 'topright'}).addTo(map);
 		var sidebar = L.control.sidebar('sidebar').addTo(map);
 		
 		var htmlObject = mylegend.getContainer();
