--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
                 <h1 class="sidebar-header">Contatti<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
 				<p id="geotext"></p>
 				<p id="sidebar-text; margin-right: 10px"> Il WebGIS è stato realizzato nell'ambito del progetto RIONERO2020 - Laboratorio partecipato per lo sviluppo locale.
-				Il progetto, finanziato dal Comune di Rionero Sannitico, è stato promosso e coordindato da Antonio Petrocelli che si avvalso del supporto tecnico di Ludovico Frate e Alfonso Ianiro.
+				Il progetto, finanziato dal Comune di Rionero Sannitico, è stato promosso e coordindato da Antonio Petrocelli che si avvalso del supporto tecnico di Ludovico Frate,  Alfonso Ianiro e Marialaura Imbriaco.
 				
 				<br>
 				<br>
-				Il WebGIS è stato ideato da <a style="color:#FEDA60; text-decoration:none" href="http://www.lezionigis.it" target="_blank"> <b>Ludovico Frate</b></a> con la collaborazione di Antonio Petrocelli.
+				Il WebGIS è stato ideato da <a style="color:#FEDA60; text-decoration:none" href="http://www.lezionigis.it" target="_blank"> <b>Ludovico Frate</b></a> con la collaborazione di Antonio Petrocelli e Marialaura Imbriaco.
 				</p>
             </div>
 			<div class="sidebar-pane" id="messages">
