--- a/index.html
+++ b/index.html
@@ -345,10 +345,10 @@
 		<script src="js/leaflet-sidebar.js"></script> <!--script sidebar-->
 		<!--<script src="js/jquery-sidebar.js"></script> <!-- call to jquery -->
 		<!--<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>-->
-		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script> <!-- call to jquery -->
+		<!--<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script> <!-- call to jquery -->
 		<script type="text/javascript" src="js/leaflet.ajax.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	-->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
 		<script src="js/spin.js"></script>
 		<script src="js/leaflet.spin.js"></script>
         <script src="js/leaflet.rotatedMarker.js"></script>
