--- a/index.html
+++ b/index.html
@@ -346,6 +346,7 @@
 		<!--<script src="js/jquery-sidebar.js"></script> <!-- call to jquery -->
 		<!--<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>-->
 		<!--<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script> <!-- call to jquery -->
+		<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 		<script type="text/javascript" src="js/leaflet.ajax.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
