--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 				
 				<br>
 				<br>
-				Il WebGIS è stato ideato da <a style="color:#FEDA60; text-decoration:none" href="http://www.lezionigis.it" target="_blank"> <b>Ludovico Frate</b></a> con la collaborazione di Antonio Petrocelli e Marialaura Imbriaco.
+				Il WebGIS è stato ideato e sviluppato <a style="color:#FEDA60; text-decoration:none" href="http://www.lezionigis.it" target="_blank"> <b>Ludovico Frate</b></a>, Antonio Petrocelli e Marialaura Imbriaco.
 				</p>
             </div>
 			<div class="sidebar-pane" id="messages">
