--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
             </ul>
 			<ul role="tablist">
-                <li><a href="#contacts" title = "Contatti" role="tab"><i class="fa fa-user"></i></a></li>
+                <li><a href="#contacts" title = "Team" role="tab"><i class="fa fa-user"></i></a></li>
             </ul>
         </div>
     
@@ -130,15 +130,21 @@
 				<img src = "images/uso.gif" width = "350" height = "250">
             </div>
 			<div class="sidebar-pane" id="contacts">
-                <h1 class="sidebar-header">Contatti<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
+                <h1 class="sidebar-header">Team<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
 				<p id="geotext"></p>
 				<p id="sidebar-text; margin-right: 10px"> Il WebGIS è stato realizzato nell'ambito del progetto RIONERO2020 - Laboratorio partecipato per lo sviluppo locale.
-				Il progetto, finanziato dal Comune di Rionero Sannitico, è stato promosso e coordindato da Antonio Petrocelli che si avvalso del supporto tecnico di Ludovico Frate,  Alfonso Ianiro e Marialaura Imbriaco.
-				
 				<br>
 				<br>
-				Il WebGIS è stato ideato e sviluppato <a style="color:#FEDA60; text-decoration:none" href="http://www.lezionigis.it" target="_blank"> <b>Ludovico Frate</b></a>, Antonio Petrocelli e Marialaura Imbriaco.
+				<a style="color:#FEDA60; text-decoration:none"> <b>Antonio Petrocelli</b></a> > Progettazione e coordinamento
+				<br>
+				<br>
+				<a style="color:#FEDA60; text-decoration:none" href="http://www.lezionigis.it" target="_blank"> <b>Ludovico Frate</b></a> > Produzione cartografica, consulenza forestale, sviluppo webgis
 				</p>
+				<br>
+				<a style="color:#FEDA60; text-decoration:none"> <b>Marialaura Imbriaco</b></a> > Produzione cartografica, analisi territoriali, progettazione grafica
+				<br>
+				<br>
+				<a style="color:#FEDA60; text-decoration:none"> <b>Alfonso Ianiro</b></a> > Ricognizione terreni pubblici, consulenza ambientale
             </div>
 			<div class="sidebar-pane" id="messages">
                 <h1 class="sidebar-header"><font face="sans-serif">Invia e-mail a: rionero2020@gmail.com</font><span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
